--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
-https://github.com/yudhaprasetya/yudhaprasetya.github.io.git
+# Exclude node.js modules
+node_modules/
+
+# Exclude log files
+*.log*
+
+# Exclude system files
+.DS_Store
