--- a/package.json
+++ b/package.json
@@ -4,11 +4,293 @@
   "description": "https://github.com/yudhaprasetya/yudhaprasetya.github.io.git",
   "main": "index.js",
   "dependencies": {
-    "gh-pages": "^2.0.1"
+    "7zip-bin": "^5.0.3",
+    "ajv": "^6.10.2",
+    "ansi-styles": "^3.2.1",
+    "app-builder-bin": "^3.4.2",
+    "ajv-keywords": "^3.4.1",
+    "argparse": "^1.0.10",
+    "app-builder-lib": "^21.1.1",
+    "array-find-index": "^1.0.2",
+    "array-uniq": "^1.0.3",
+    "ansi-align": "^3.0.0",
+    "ansi-regex": "^4.1.0",
+    "async": "^2.6.3",
+    "assert-plus": "^1.0.0",
+    "asynckit": "^0.4.0",
+    "async-exit-hook": "^2.0.1",
+    "aws-sign2": "^0.7.0",
+    "balanced-match": "^1.0.0",
+    "aws4": "^1.8.0",
+    "bluebird": "^3.5.5",
+    "bcrypt-pbkdf": "^1.0.2",
+    "boxen": "^3.2.0",
+    "bluebird-lst": "^1.0.9",
+    "array-union": "^1.0.2",
+    "asn1": "^0.2.4",
+    "brace-expansion": "^1.1.11",
+    "builder-util-runtime": "^8.3.0",
+    "camelcase": "^5.3.1",
+    "cacheable-request": "^6.1.0",
+    "caseless": "^0.12.0",
+    "camelcase-keys": "^2.1.0",
+    "chromium-pickle-js": "^0.2.0",
+    "buffer-from": "^1.1.1",
+    "cli-boxes": "^2.2.0",
+    "builder-util": "^21.1.4",
+    "clone-response": "^1.0.2",
+    "chalk": "^2.4.2",
+    "code-point-at": "^1.1.0",
+    "ci-info": "^2.0.0",
+    "color-convert": "^1.9.3",
+    "color-name": "^1.1.3",
+    "commander": "^2.20.0",
+    "combined-stream": "^1.0.8",
+    "cliui": "^5.0.0",
+    "configstore": "^4.0.0",
+    "cross-spawn": "^5.1.0",
+    "crypto-random-string": "^1.0.0",
+    "concat-stream": "^1.6.2",
+    "concat-map": "^0.0.1",
+    "dashdash": "^1.14.1",
+    "core-util-is": "^1.0.2",
+    "debug": "^4.1.1",
+    "deep-extend": "^0.6.0",
+    "decamelize": "^1.2.0",
+    "defer-to-connect": "^1.0.2",
+    "delayed-stream": "^1.0.0",
+    "currently-unhandled": "^0.4.1",
+    "dotenv": "^8.0.0",
+    "dot-prop": "^4.2.0",
+    "dmg-builder": "^21.1.1",
+    "decompress-response": "^3.3.0",
+    "duplexer3": "^0.1.4",
+    "dotenv-expand": "^5.1.0",
+    "ecc-jsbn": "^0.1.2",
+    "ejs": "^2.6.2",
+    "electron-download": "^4.1.1",
+    "email-addresses": "^3.0.3",
+    "emoji-regex": "^7.0.3",
+    "electron": "^5.0.8",
+    "electron-builder": "^21.1.1",
+    "env-paths": "^1.0.0",
+    "error-ex": "^1.3.2",
+    "electron-publish": "^21.1.1",
+    "esprima": "^4.0.1",
+    "execa": "^0.7.0",
+    "escape-string-regexp": "^1.0.5",
+    "extend": "^3.0.2",
+    "extsprintf": "^1.3.0",
+    "fast-deep-equal": "^2.0.1",
+    "fast-json-stable-stringify": "^2.0.0",
+    "end-of-stream": "^1.4.1",
+    "filename-reserved-regex": "^1.0.0",
+    "filenamify": "^1.2.1",
+    "find-up": "^3.0.0",
+    "extract-zip": "^1.6.7",
+    "forever-agent": "^0.6.1",
+    "fs-extra": "^8.1.0",
+    "fd-slicer": "^1.0.1",
+    "get-caller-file": "^2.0.5",
+    "filenamify-url": "^1.0.0",
+    "get-stdin": "^4.0.1",
+    "form-data": "^2.3.3",
+    "getpass": "^0.1.7",
+    "get-stream": "^3.0.0",
+    "glob": "^7.1.4",
+    "globby": "^6.1.0",
+    "fs.realpath": "^1.0.0",
+    "graceful-fs": "^4.2.0",
+    "gh-pages": "^2.0.1",
+    "har-schema": "^2.0.0",
+    "har-validator": "^5.1.3",
+    "has-yarn": "^2.1.0",
+    "global-dirs": "^0.1.1",
+    "has-flag": "^3.0.0",
+    "http-cache-semantics": "^4.0.3",
+    "http-signature": "^1.2.0",
+    "got": "^9.6.0",
+    "humanize-url": "^1.0.1",
+    "import-lazy": "^2.1.0",
+    "imurmurhash": "^0.1.4",
+    "indent-string": "^2.1.0",
+    "inflight": "^1.0.6",
+    "hosted-git-info": "^2.7.1",
+    "ini": "^1.3.5",
+    "is-arrayish": "^0.2.1",
+    "is-finite": "^1.0.2",
+    "is-ci": "^2.0.0",
+    "iconv-lite": "^0.5.0",
+    "inherits": "^2.0.4",
+    "is-fullwidth-code-point": "^2.0.0",
+    "is-npm": "^3.0.0",
+    "is-obj": "^1.0.1",
+    "is-installed-globally": "^0.1.0",
+    "is-path-inside": "^1.0.1",
+    "is-stream": "^1.1.0",
+    "is-typedarray": "^1.0.0",
+    "isarray": "^1.0.0",
+    "is-utf8": "^0.2.1",
+    "is-yarn-global": "^0.3.0",
+    "isexe": "^2.0.0",
+    "isbinaryfile": "^4.0.2",
+    "is-plain-obj": "^1.1.0",
+    "jsbn": "^0.1.1",
+    "json-schema": "^0.2.3",
+    "json-buffer": "^3.0.0",
+    "isstream": "^0.1.2",
+    "json-stringify-safe": "^5.0.1",
+    "jsonfile": "^4.0.0",
+    "json-schema-traverse": "^0.4.1",
+    "js-yaml": "^3.13.1",
+    "keyv": "^3.1.0",
+    "latest-version": "^5.1.0",
+    "lazy-val": "^1.0.4",
+    "load-json-file": "^1.1.0",
+    "jsprim": "^1.4.1",
+    "lodash": "^4.17.15",
+    "json5": "^2.1.0",
+    "lowercase-keys": "^1.0.1",
+    "lru-cache": "^4.1.5",
+    "make-dir": "^1.3.0",
+    "loud-rejection": "^1.6.0",
+    "meow": "^3.7.0",
+    "locate-path": "^3.0.0",
+    "mime-db": "^1.40.0",
+    "mime-types": "^2.1.24",
+    "mimic-response": "^1.0.1",
+    "mime": "^2.4.4",
+    "minimist": "^1.2.0",
+    "map-obj": "^1.0.1",
+    "ms": "^2.1.2",
+    "mkdirp": "^0.5.1",
+    "normalize-url": "^1.9.1",
+    "nugget": "^2.0.1",
+    "minimatch": "^3.0.4",
+    "normalize-package-data": "^2.5.0",
+    "npm-run-path": "^2.0.2",
+    "number-is-nan": "^1.0.1",
+    "oauth-sign": "^0.9.0",
+    "object-keys": "^0.4.0",
+    "object-assign": "^4.1.1",
+    "p-cancelable": "^1.1.0",
+    "p-finally": "^1.0.0",
+    "p-locate": "^3.0.0",
+    "p-limit": "^2.2.0",
+    "package-json": "^6.5.0",
+    "parse-color": "^1.0.0",
+    "path-exists": "^3.0.0",
+    "parse-json": "^2.2.0",
+    "once": "^1.4.0",
+    "p-try": "^2.2.0",
+    "path-is-absolute": "^1.0.1",
+    "path-parse": "^1.0.6",
+    "pend": "^1.2.0",
+    "path-is-inside": "^1.0.2",
+    "performance-now": "^2.1.0",
+    "pify": "^2.3.0",
+    "path-key": "^2.0.1",
+    "pinkie-promise": "^2.0.1",
+    "path-type": "^1.1.0",
+    "pretty-bytes": "^1.0.4",
+    "progress-stream": "^1.2.0",
+    "pinkie": "^2.0.4",
+    "prepend-http": "^1.0.4",
+    "pseudomap": "^1.0.2",
+    "pump": "^3.0.0",
+    "psl": "^1.2.0",
+    "punycode": "^2.1.1",
+    "process-nextick-args": "^2.0.1",
+    "query-string": "^4.3.4",
+    "read-config-file": "^4.0.1",
+    "rc": "^1.2.8",
+    "readable-stream": "^2.3.6",
+    "qs": "^6.5.2",
+    "read-pkg": "^1.1.0",
+    "registry-auth-token": "^4.0.0",
+    "redent": "^1.0.0",
+    "repeating": "^2.0.1",
+    "request": "^2.88.0",
+    "require-directory": "^2.1.1",
+    "require-main-filename": "^2.0.0",
+    "responselike": "^1.0.2",
+    "registry-url": "^5.1.0",
+    "read-pkg-up": "^1.0.1",
+    "safe-buffer": "^5.2.0",
+    "safer-buffer": "^2.1.2",
+    "sanitize-filename": "^1.6.1",
+    "sax": "^1.2.4",
+    "schema-utils": "^2.0.1",
+    "semver-diff": "^2.1.0",
+    "resolve": "^1.11.1",
+    "rimraf": "^2.6.3",
+    "set-blocking": "^2.0.0",
+    "shebang-regex": "^1.0.0",
+    "single-line-log": "^1.1.2",
+    "shebang-command": "^1.2.0",
+    "semver": "^5.7.0",
+    "source-map": "^0.6.1",
+    "source-map-support": "^0.5.12",
+    "spdx-correct": "^3.1.0",
+    "spdx-expression-parse": "^3.0.0",
+    "sort-keys": "^1.1.2",
+    "signal-exit": "^3.0.2",
+    "speedometer": "^0.1.4",
+    "sprintf-js": "^1.0.3",
+    "sshpk": "^1.16.1",
+    "spdx-license-ids": "^3.0.5",
+    "strict-uri-encode": "^1.1.0",
+    "string_decoder": "^1.1.1",
+    "spdx-exceptions": "^2.2.0",
+    "strip-bom": "^2.0.0",
+    "string-width": "^3.1.0",
+    "stat-mode": "^0.3.0",
+    "strip-json-comments": "^2.0.1",
+    "strip-ansi": "^5.2.0",
+    "strip-url-auth": "^1.0.1",
+    "sumchecker": "^2.0.2",
+    "supports-color": "^5.5.0",
+    "strip-outer": "^1.0.1",
+    "temp-file": "^3.3.4",
+    "term-size": "^1.2.0",
+    "throttleit": "^0.0.2",
+    "strip-indent": "^1.0.1",
+    "strip-eof": "^1.0.0",
+    "to-readable-stream": "^1.0.0",
+    "trim-newlines": "^1.0.0",
+    "trim-repeated": "^1.0.0",
+    "tunnel-agent": "^0.6.0",
+    "tough-cookie": "^2.4.3",
+    "through2": "^0.2.3",
+    "tweetnacl": "^0.14.5",
+    "truncate-utf8-bytes": "^1.0.2",
+    "unique-string": "^1.0.0",
+    "type-fest": "^0.3.1",
+    "typedarray": "^0.0.6",
+    "uri-js": "^4.2.2",
+    "universalify": "^0.1.2",
+    "utf8-byte-length": "^1.0.4",
+    "url-parse-lax": "^3.0.0",
+    "uuid": "^3.3.2",
+    "update-notifier": "^3.0.1",
+    "which": "^1.3.1",
+    "util-deprecate": "^1.0.2",
+    "validate-npm-package-license": "^3.0.4",
+    "verror": "^1.10.0",
+    "widest-line": "^2.0.1",
+    "wrap-ansi": "^5.1.0",
+    "write-file-atomic": "^2.4.3",
+    "which-module": "^2.0.0",
+    "xtend": "^2.1.2",
+    "yallist": "^2.1.2",
+    "y18n": "^4.0.0",
+    "wrappy": "^1.0.2",
+    "xdg-basedir": "^3.0.0",
+    "yauzl": "^2.4.1",
+    "yargs-parser": "^13.1.1",
+    "yargs": "^13.3.0"
   },
-  "devDependencies": {
-    "electron": "^5.0.8"
-  },
+  "devDependencies": {},
   "scripts": {
     "start": "electron ."
   },
