--- a/bangunan/package.json
+++ b/bangunan/package.json
@@ -54,6 +54,7 @@
     "@electron-forge/maker-rpm": "6.0.0-beta.43",
     "@electron-forge/maker-squirrel": "6.0.0-beta.43",
     "@electron-forge/maker-zip": "6.0.0-beta.43",
-    "electron": "5.0.8"
+    "electron": "5.0.8",
+    "electron-prebuilt-compile": "^4.0.0"
   }
 }
