--- a/bangunan/package.json
+++ b/bangunan/package.json
@@ -46,7 +46,7 @@
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0",
-    "mysql": "^2.17.1"
+    "mysql": "github:mysqljs/mysql"
   },
   "devDependencies": {
     "@electron-forge/cli": "6.0.0-beta.43",
